--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -4,7 +4,7 @@
   height: 250px;
   background: linear-gradient(135deg, #ff00ff, #800080);
   border-radius: 70% 30% 70% 30% / 60% 40% 60% 40%; */
-  
+
 .about {
   display: flex;
   flex-direction: column;
@@ -22,10 +22,7 @@
   flex: 0 0 auto; 
   margin-right: 20px;
 }
-.bugpf{
-  width: 15px;
-  height: 15px;
-}
+
 .profilePic {
   width: 200px;  
   height: 250px; 
@@ -46,7 +43,6 @@
   margin-top: 20px;
   font-size: large;
 }
-
 
 .work {
   margin: 20px 0;
@@ -121,8 +117,6 @@
 }
 
 .navList {
-  padding: 0;
-  margin: 0;
   display: flex;
   justify-content:right;
   list-style-type: none;
@@ -130,6 +124,7 @@
 
 .navItem {
   margin: 0 10px;
+  font-size: medium;
 }
 
 .navLink {
